Overflow-x solved

--- a/style/style_body.css
+++ b/style/style_body.css
@@ -3,6 +3,7 @@ html{
 }
 body{
 	margin: 0px;
+	overflow-x: hidden;
 	/*
 	background-color: gray;
 	background-image: url("..//images//pietre.jpg") ;
